# capydeploy

./: .gitignore  .gitmodules  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  app.go  build.bat  build.sh  build_all.bat  build_all.sh  go.mod  go.sum  main.go  release-please-config.json  wails.json
.claude/: CLAUDE.md
apps/agents/agent-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/agents/agent-tauri/src-tauri/capabilities/: default.json
apps/agents/agent-tauri/src-tauri/src/: auth.rs  config.rs  events.rs  handler.rs  lib.rs  main.rs  state.rs  types.rs
apps/agents/agent-tauri/src-tauri/src/commands/: auth.rs  connections.rs  console_log.rs  files.rs  mod.rs  settings.rs  status.rs  steam.rs  telemetry.rs
apps/agents/agent-tauri/src-tauri/src/handlers/: artwork.rs  disconnect.rs  filesystem.rs  games.rs  info.rs  mod.rs  pairing.rs  shortcuts.rs  telemetry.rs  upload.rs
apps/agents/agent-tauri/src-tauri/src/handlers/filesystem/: browse.rs  mod.rs  transfer.rs
apps/agents/agent-tauri/src-tauri/src/helpers/: artwork_utils.rs  file_ops.rs  identity.rs  mod.rs  network.rs  paths.rs
apps/hub-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/hub-tauri/src-tauri/capabilities/: default.json  popout.json
apps/hub-tauri/src-tauri/src/: agent_adapter.rs  config.rs  events.rs  lib.rs  state.rs  types.rs
apps/hub-tauri/src-tauri/src/commands/: connection.rs  deploy.rs  files.rs  filesystem.rs  games.rs  mod.rs  settings.rs  steamgriddb.rs
apps/hub-tauri/src-tauri/src/commands/filesystem/: commands.rs  download.rs  mod.rs  upload.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: binary.rs  connection.rs  handler.rs  lib.rs  server.rs
crates/console-log/: Cargo.toml
crates/console-log/src/: collector.rs  lib.rs
crates/data-channel/: Cargo.toml
crates/data-channel/src/: client.rs  error.rs  lib.rs  server.rs  token.rs  wire.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: client.rs  lib.rs  platform.rs  types.rs
crates/file-ops/: Cargo.toml
crates/file-ops/src/: browse.rs  delete.rs  install.rs  lib.rs
crates/game-log/: Cargo.toml
crates/game-log/src/: lib.rs  tailer.rs  wrapper.rs
crates/hub-console-log/: Cargo.toml
crates/hub-console-log/src/: lib.rs  state.rs
crates/hub-deploy/: Cargo.toml
crates/hub-deploy/src/: agent.rs  artwork_selector.rs  deploy.rs  error.rs  lib.rs  scanner.rs  types.rs
crates/hub-games/: Cargo.toml
crates/hub-games/src/: error.rs  games.rs  lib.rs  types.rs
crates/hub-telemetry/: Cargo.toml
crates/hub-telemetry/src/: buffer.rs  lib.rs  state.rs
crates/steam/: Cargo.toml
crates/steam/src/: cef.rs  controller.rs  controller_linux.rs  controller_windows.rs  lib.rs  paths.rs  paths_windows.rs  shortcuts.rs  users.rs  vdf.rs
crates/steamgriddb/: Cargo.toml
crates/steamgriddb/src/: cache.rs  client.rs  lib.rs  types.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  sysfs_linux.rs  sysfs_windows.rs
deprecated/: .golangci.yml  build_all.bat  go.mod  go.sum
docs/: ADDING_PLATFORM.md  README.md  _config.yml  about.html  api.html  app.config.ts  (+8 more)
rust/: Cargo.toml
rust/apps/agent-desktop/: Cargo.toml
rust/apps/agent-desktop/src/: app.rs  config.rs  main.rs
rust/apps/agent-tauri/: build.sh
rust/apps/agent-tauri/frontend/src/lib/components/: SteamInfo.svelte
rust/apps/agent-tauri/frontend/src/lib/components/ui/: Dialog.svelte  index.ts
rust/apps/agent-tauri/src-tauri/: Cargo.toml
rust/apps/agent-tauri/src-tauri/src/: events.rs  handler.rs  lib.rs  state.rs
rust/apps/agent-tauri/src-tauri/src/commands/: console_log.rs  mod.rs  steam.rs  telemetry.rs
rust/apps/hub-rs/: Cargo.toml  build.sh
rust/apps/hub-rs/src/: app.rs  bridge.rs  config.rs  main.rs  message.rs  subscriptions.rs  theme.rs
rust/apps/hub-rs/src/dialogs/: artwork.rs  mod.rs  pairing.rs
rust/apps/hub-rs/src/dialogs/artwork/: dialog.rs  mod.rs  view.rs
rust/apps/hub-rs/src/views/: console.rs  deploy.rs  devices.rs  games.rs  mod.rs  settings.rs  telemetry.rs
rust/apps/hub-tauri/: build.sh
rust/apps/hub-tauri/frontend/: vite.config.ts
rust/apps/hub-tauri/frontend/src/: app.html
rust/apps/hub-tauri/frontend/src/lib/: wailsjs.ts
rust/apps/hub-tauri/frontend/src/lib/components/: ConnectionStatus.svelte  ConsoleLog.svelte  DeviceList.svelte  index.ts
rust/apps/hub-tauri/frontend/src/lib/components/ui/: Button.svelte  Select.svelte  Toast.svelte
rust/apps/hub-tauri/frontend/src/lib/stores/: connection.ts
rust/apps/hub-tauri/frontend/src/routes/: +page.svelte
rust/apps/hub-tauri/src-tauri/src/: events.rs  lib.rs  main.rs
rust/apps/hub-tauri/src-tauri/src/commands/: console_log.rs  deploy.rs  files.rs  steamgriddb.rs
rust/crates/agent-server/src/: connection.rs  lib.rs  server.rs
rust/crates/console-log/src/: cdp.rs  collector.rs
rust/crates/discovery/src/: client.rs  platform.rs  server.rs
rust/crates/game-log/src/: tailer.rs
rust/crates/hub-connection/: Cargo.toml
rust/crates/hub-connection/src/: lib.rs  manager.rs  ws_client.rs
rust/crates/hub-deploy/src/: agent.rs  deploy.rs  scanner.rs  types.rs
rust/crates/hub-games/src/: games.rs
rust/crates/hub-telemetry/: Cargo.toml
rust/crates/hub-telemetry/src/: state.rs
rust/crates/hub-widgets/: Cargo.toml
rust/crates/hub-widgets/examples/: widget_gallery.rs
rust/crates/hub-widgets/src/: colors.rs  combined_sparklines.rs  gradient_progress.rs  lib.rs  sparkline.rs  telemetry_gauge.rs
rust/crates/protocol/: Cargo.toml
rust/crates/protocol/src/: constants.rs  messages.rs  telemetry.rs
rust/crates/steam/: Cargo.toml
rust/crates/steam/src/: cef.rs  lib.rs  paths_linux.rs
rust/crates/steamgriddb/src/: types.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/src/: collector.rs  sysfs_other.rs
rust/crates/transfer/: Cargo.toml
rust/crates/transfer/src/: lib.rs
rust/crates/tray/: Cargo.toml
rust/tests/wire_compat/fixtures/: agent_info.json  init_upload_request.json  upload_chunk_request.json
(+397 files in other folders)
