[workspace]
members = [
    "crates/protocol",
    "crates/steam",
    "crates/discovery",
    "crates/transfer",
    "crates/agent-server",
    "crates/telemetry",
    "crates/console-log",
    "crates/game-log",
    "crates/file-ops",
    "crates/tray",
    "crates/steamgriddb",
    "crates/hub-connection",
    "crates/hub-deploy",
    "crates/hub-games",
    "crates/hub-telemetry",
    "crates/hub-console-log",
    "crates/hub-settings",
    "crates/hub-widgets",
    "apps/agent-desktop",
    "apps/hub-rs",
    "tests/wire_compat",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/lobinuxsoft/capydeploy"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.12"
crc32fast = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
if-addrs = "0.13"
hostname = "0.4"

# Workspace crates
capydeploy-protocol = { path = "crates/protocol" }
capydeploy-steam = { path = "crates/steam" }
capydeploy-discovery = { path = "crates/discovery" }
capydeploy-transfer = { path = "crates/transfer" }
capydeploy-agent-server = { path = "crates/agent-server" }
capydeploy-telemetry = { path = "crates/telemetry" }
capydeploy-console-log = { path = "crates/console-log" }
capydeploy-game-log = { path = "crates/game-log" }
capydeploy-file-ops = { path = "crates/file-ops" }
capydeploy-tray = { path = "crates/tray" }
capydeploy-steamgriddb = { path = "crates/steamgriddb" }
capydeploy-hub-connection = { path = "crates/hub-connection" }
capydeploy-hub-deploy = { path = "crates/hub-deploy" }
capydeploy-hub-games = { path = "crates/hub-games" }
capydeploy-hub-telemetry = { path = "crates/hub-telemetry" }
capydeploy-hub-console-log = { path = "crates/hub-console-log" }
capydeploy-hub-settings = { path = "crates/hub-settings" }
capydeploy-hub-widgets = { path = "crates/hub-widgets" }
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false }
sha2 = "0.10"
hex = "0.4"
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
