[package]
name = "capydeploy-agent-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket server for the CapyDeploy agent"

[dependencies]
capydeploy-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
