[package]
name = "capydeploy-console-log"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CDP-based console log streaming with level filtering"

[dependencies]
capydeploy-protocol = { workspace = true }
capydeploy-steam = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
