[package]
name = "capydeploy-hub-deploy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hub game deploy flow: scan, upload, artwork, shortcut creation"

[dependencies]
capydeploy-protocol = { workspace = true }
capydeploy-transfer = { workspace = true }
capydeploy-data-channel = { workspace = true }
capydeploy-steamgriddb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
