[package]
name = "capydeploy-hub-games"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hub installed games management: list, delete, artwork update, log wrapper"

[dependencies]
capydeploy-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
