[package]
name = "capydeploy-hub-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hub telemetry dashboard state: ring buffers, per-agent metrics, query API"

[dependencies]
capydeploy-protocol = { workspace = true }
serde_json = { workspace = true }
