[package]
name = "capydeploy-steam"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Steam integration for CapyDeploy (VDF parser, shortcuts, paths, controller, CEF/CDP)"

[dependencies]
capydeploy-protocol = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
serde_json = { workspace = true }
