[package]
name = "capydeploy-steamgriddb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SteamGridDB API client for artwork search and download"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
percent-encoding = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
