[package]
name = "capydeploy-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware telemetry collector for the CapyDeploy agent"

[dependencies]
capydeploy-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
] }

[dev-dependencies]
tempfile = "3"
