[package]
name = "capydeploy-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CapyDeploy desktop agent — headless service for game deployment"

[[bin]]
name = "capydeploy-agent"
path = "src/main.rs"

[dependencies]
capydeploy-protocol = { workspace = true }
capydeploy-steam = { workspace = true }
capydeploy-discovery = { workspace = true }
capydeploy-agent-server = { workspace = true }
capydeploy-telemetry = { workspace = true }
capydeploy-console-log = { workspace = true }
capydeploy-game-log = { workspace = true }
capydeploy-file-ops = { workspace = true }
capydeploy-transfer = { workspace = true }
capydeploy-tray = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = "1"
hostname = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
