[package]
name = "capydeploy-hub-connection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
capydeploy-protocol = { workspace = true }
capydeploy-discovery = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
