[package]
name = "capydeploy-hub-widgets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable canvas widgets for the Hub telemetry dashboard (gauges, progress bars, sparklines)"

[dependencies]
libcosmic = { workspace = true }

[dev-dependencies]
libcosmic = { workspace = true, features = ["winit"] }
env_logger = "0.11"

[[example]]
name = "widget_gallery"
required-features = ["example"]

[features]
example = ["libcosmic/winit"]
