[package]
name = "capydeploy-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol types for CapyDeploy Hub-Agent communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
