[package]
name = "capydeploy-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware telemetry collector for the CapyDeploy agent"

[dependencies]
capydeploy-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
