[package]
name = "capydeploy-agent-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CapyDeploy Agent — Tauri v2 desktop app"

[lib]
name = "capydeploy_agent_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "capydeploy-agent-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }

# Workspace crates
capydeploy-protocol = { workspace = true }
capydeploy-steam = { workspace = true }
capydeploy-discovery = { workspace = true }
capydeploy-transfer = { workspace = true }
capydeploy-agent-server = { workspace = true }
capydeploy-telemetry = { workspace = true }
capydeploy-console-log = { workspace = true }

# Core
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"
rand = "0.8"
if-addrs = { workspace = true }
